<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_member"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:title="@string/title_member" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_project" />

    <item
        android:id="@+id/navigation_buysell"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/title_jual" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
